# odayplus

./: .dockerignore  .env.e2e.example  .gitignore  Makefile  README.md  ai-activity-log.jsonl  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  playwright.intake-functional-coverage.config.ts  playwright.intake-functional.config.ts  pyproject.toml
.github/branch-protection/: policy.json
.github/workflows/: apply-assisted-intake-normative-register-fix.yml  assisted-intake-design-validation.yml  ci.yml  deploy-dev.yml  deploy-staging.yml  external-proof-followup.yml  promote-dev-to-main.yml
.orchestrator/: approval_queue.py  auth_loader.py  auto-merge-guard.sh  auto_commit_archive.py  auto_merge_green_prs.py  chair_review_wave_health.py  claude-approval-broker.mcp.json  claude_permission_prompt_mcp.py  common.py  config.example.json  config.local.example.json  coordination_file_watcher.py  coordination_repo_mirror.py  copilot_login_helper.py  cross_repo_issue_mapper.py  dispatch_policy.py  dispatch_policy_contract.md  doctor.py  emit_test_event.py  github_bus.py  github_cloud_relay.py  github_command_parser.py  github_webhook_server.py  lovable_task_publisher.py  multi_repo_registry.py  permission_broker.py  provider_permissions.py  rebase_helper.py  rebase_helper_contract.md  runtime_state.py  sidecar_catalog.json  sidecar_cleanup.py  sidecar_cleanup_contract.md  supervisor.py  supervisor_watchdog.py  sync_provider_permissions.py  task_archive.py  test_adapter_fallback_policy.py  test_approval_queue.py  test_auth_loader.py  (+19 more)
.orchestrator/adapters/: __init__.py  antigravity.py  base.py  claude_cli.py  claude_code.py  codex.py  copilot_cloud.py  copilot_local.py  file_inbox.py  gemini.py  qwen.py  vscode_chat.py  vscode_command.py
.orchestrator/skills/: chairman-review.md  task-closeout-finalization.md  worker-anchor-commit.md
.orchestrator/templates/: github_ops_issue.md  github_review_pr.md  wakeup.txt
apps/: README.md  __init__.py
apps/api/: README.md  __init__.py  server.py
apps/cli/: README.md  __init__.py
apps/data_platform/: README.md  __init__.py  config.py  contracts.py  definitions.py  dlt_runtime.py  identifiers.py  mapping.py  pipeline.py  pyproject.toml  selection.py  serialization.py  source.py  status_mapping.py  status_mapping.schema.json  store.py
apps/data_platform/sql/: control_schema.sql
apps/data_platform/tests/: __init__.py  conftest.py  test_config.py  test_definitions_and_backfill.py  test_dlt_runtime.py  test_live_source_shapes.py  test_mapping.py  test_pipeline.py  test_source_contract.py  test_sql_contract.py
apps/scheduler/: README.md  __init__.py
apps/web/: README.md  next.config.mjs  package.json  tsconfig.json
apps/worker/: README.md  __init__.py
docs-site/: dashboard-bundle.json
docs/adr/: ADR-0001-platform-foundation.md
docs/architecture/: ODAY_PLUS_EXECUTION_BASELINE.md
docs/data/: EXTERNAL_SOURCE_CONNECTOR_MATRIX.md  MODEL_READY_VIEWS_BASELINE.md  ODAY_PLUS_ASSISTED_LISTING_INTAKE_SCHEMA_0002_CONSISTENCY_PATCH.sql  ODAY_PLUS_ASSISTED_LISTING_INTAKE_SCHEMA_0003_PROMOTION_STATE_PATCH.sql  ODAY_PLUS_ASSISTED_LISTING_INTAKE_SCHEMA_0004_TENANT_RLS_LINEAGE_PATCH.sql  ODAY_PLUS_CANONICAL_SCHEMA_BASELINE.md
docs/deployment/: ENVIRONMENTS.md  GCP_DEPLOY_GUIDE.md  MIGRATION_BACKFILL_RUNBOOK.md  RELEASE_BASELINE.md
docs/design/: ODAY_PLUS_ASSET_AND_NETPLAN_UI_SPEC.md  ODAY_PLUS_ASSISTED_LISTING_INTAKE_AUTHORIZATION_MATRIX.md  ODAY_PLUS_ASSISTED_LISTING_INTAKE_DESIGN_REQUIREMENTS.md  ODAY_PLUS_ASSISTED_LISTING_INTAKE_FLEET_EXECUTION_TASKS_2026-07-18.json  ODAY_PLUS_ASSISTED_LISTING_INTAKE_FLEET_EXECUTION_TASKS_2026-07-18.md  ODAY_PLUS_ASSISTED_LISTING_INTAKE_FUNCTIONAL_CLOSURE_EXECUTION_TASKS_2026-07-23.json  ODAY_PLUS_ASSISTED_LISTING_INTAKE_FUNCTIONAL_CLOSURE_EXECUTION_TASKS_2026-07-23.md  ODAY_PLUS_ASSISTED_LISTING_INTAKE_FUNCTIONAL_COMPLETENESS_AUDIT_2026-07-23.json  ODAY_PLUS_ASSISTED_LISTING_INTAKE_FUNCTIONAL_COMPLETENESS_AUDIT_2026-07-23.md  ODAY_PLUS_ASSISTED_LISTING_INTAKE_FUNCTIONAL_REQUIREMENT_TRACE_2026-07-23.md  ODAY_PLUS_ASSISTED_LISTING_INTAKE_NORMATIVE_REGISTER_SYNC_EVIDENCE.md  ODAY_PLUS_ASSISTED_LISTING_INTAKE_REVIEW_MANIFEST.yaml  ODAY_PLUS_ASSISTED_LISTING_INTAKE_STATE_CONTRACTS.md  ODAY_PLUS_ASSISTED_LISTING_INTAKE_SYSTEM_DESIGN_ALIGNMENT_REQUEST.md  ODAY_PLUS_ASSISTED_LISTING_INTAKE_SYSTEM_DESIGN_RESPONSE.md  ODAY_PLUS_ASSISTED_LISTING_INTAKE_SYSTEM_DESIGN_RESPONSE_REVIEW.md  ODAY_PLUS_ASSISTED_LISTING_INTAKE_UI_FLEET_EXECUTION_TASKS_2026-07-20.json  ODAY_PLUS_ASSISTED_LISTING_INTAKE_UI_FLEET_EXECUTION_TASKS_2026-07-20.md  ODAY_PLUS_ASSISTED_LISTING_INTAKE_UI_VISUAL_DESIGN_HANDOFF_REQUIREMENTS.md  ODAY_PLUS_ASSISTED_LISTING_INTAKE_UI_VISUAL_DESIGN_RESPONSE.md  ODAY_PLUS_ASSISTED_LISTING_INTAKE_UI_VISUAL_DESIGN_RESPONSE_REVIEW.md  ODAY_PLUS_ASSISTED_LISTING_INTAKE_UI_VISUAL_DESIGN_RESPONSE_REVIEW_002.md  ODAY_PLUS_ASSISTED_LISTING_INTAKE_UI_VISUAL_DESIGN_RESPONSE_REVIEW_003.md  ODAY_PLUS_ASSISTED_LISTING_INTAKE_V021_CROSS_CONTRACT_CORRECTIONS.md  ODAY_PLUS_AUDIT_EVIDENCE_UI_SPEC.md  ODAY_PLUS_COMPONENT_CONTRACTS.md  ODAY_PLUS_DESIGN_TOKENS.md  ODAY_PLUS_DESIGN_TO_FRONTEND_EXECUTION_MATRIX.md  ODAY_PLUS_EXPANSION_WORKFLOW_BLUEPRINT.md  (+16 more)
docs_archive/: EXECUTION_TASKS.md  README.md
infra/: README.md
models/: README.md
modules/: README.md  __init__.py
pipelines/: README.md
scripts/: ai-status.sh  ai_status.py  apply_assisted_intake_normative_register_fix.py  apply_branch_protection.py  build_validate_assisted_listing_intake_openapi.py  check_pr_merge_eligibility.py  deploy_cloud_run_waji.sh  external_data_backfill.py  generate_assisted_listing_intake_client.py  run-supervisor-watchdog.sh  run-supervisor.sh  supervisor_runtime_health.py  supervisor_watchdog_install.py  test_ai_status.py  test_supervisor_runtime_health.py  test_supervisor_watchdog_install.py  validate_assisted_listing_intake_design.py  validate_assisted_listing_intake_schema.sql
shared/: README.md  __init__.py
solver/: README.md
tests/: README.md  __init__.py  conftest.py  test_scaffold.py
(+1394 files in other folders)
