[project]
name = "odayplus"
version = "0.1.0"
description = "odayplus — multi-agent orchestration system (supervisor, GitHub bus, worker runtime) and supporting tooling."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "bjoe734", email = "bjoe734@gmail.com" }]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

# This repo is run as a set of scripts/services, not built as a distributable
# wheel, so no [build-system] is declared. Add one if you later package it.

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501 (line-too-long) and E402 (import-not-at-top) are pervasive in the existing
# script-style orchestrator code (sys.path bootstrapping, long log/format strings).
# Ignore them repo-wide so CI lints for real bugs (pyflakes/bugbear/pyupgrade)
# rather than failing on legacy style.
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = [".orchestrator", "scripts", "tests"]
python_files = ["test_*.py"]
addopts = "-q"
pythonpath = ["."]
markers = [
    "requires_live_env: test needs a live multi-repo / CLI / local-path environment and is excluded from CI (run with -m 'not requires_live_env')",
]
