[project]
name = "odayplus"
version = "0.1.0"
description = "odayplus — multi-agent orchestration system (supervisor, GitHub bus, worker runtime) and supporting tooling."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "bjoe734", email = "bjoe734@gmail.com" }]
dependencies = [
    # API
    "fastapi>=0.115",
    "pyyaml>=6.0.3",
    "pydantic>=2.8",
    "uvicorn[standard]>=0.30",
    # ML
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    # Solver / geospatial
    "h3>=4.5.0",
    "ortools>=9.15.6755",
    # Data
    "duckdb>=1.0",
    "sqlalchemy>=2.0",
    # HTTP client for the live listing-feed adapter (runtime code path).
    "httpx>=0.27",
    # JWT/OIDC verification (ODP-FIN-AUTH-001 / ODP-SD-09 §3).
    # [crypto] extra pulls in `cryptography` for RS256 support.
    "PyJWT[crypto]>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

# This repo is run as a set of scripts/services, not built as a distributable
# wheel, so no [build-system] is declared. Add one if you later package it.

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501 (line-too-long) and E402 (import-not-at-top) are pervasive in the existing
# script-style orchestrator code (sys.path bootstrapping, long log/format strings).
# Ignore them repo-wide so CI lints for real bugs (pyflakes/bugbear/pyupgrade)
# rather than failing on legacy style.
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = [
    ".orchestrator",
    "scripts",
    "tests",
    "modules",
    "apps",
    "shared",
    "models",
]
python_files = ["test_*.py"]
addopts = "-q"
pythonpath = ["."]
markers = [
    "requires_live_env: test needs a live multi-repo / CLI / local-path environment and is excluded from CI (run with -m 'not requires_live_env')",
]
