[project]
name = "oday-plus-data-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.12,<2",
    "dlt[postgres]>=1.20,<2",
    "psycopg[binary,pool]>=3.2,<4",
    "pymongo>=4.10,<5",
]

[project.entry-points]
"dagster.repository" = { oday_data_platform = "apps.data_platform.definitions:defs" }

[tool.pytest.ini_options]
pythonpath = ["../.."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
